--- a/sample-p1sidebar.tex
+++ b/sample-p1sidebar.tex
@@ -1,57 +1,34 @@
-\cvsection{My Life Philosophy}
+\cvsection{Technologies}
 
-\begin{quote}
-``Something smart or heartfelt, preferably in one sentence.''
-\end{quote}
-
-\cvsection{Most Proud of}
-
-\cvachievement{\faTrophy}{Fantastic Achievement}{and some details about it}
-
+\cvskill{Ruby}{5}
 \divider
 
-\cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
-
+\cvskill{Rails}{5}
 \divider
 
-\cvachievement{\faHeartbeat}{Another achievement}{more details about it of course}
+\cvskill{Relational Databases}{4}
+{\small Writing complex queries, optimization}
+\divider
+
+\cvskill{JavaScript}{3}
+\divider
+
+\cvskill{Vue.js}{3}
+\divider
+
+\cvskill{React.js}{3}
 
 \cvsection{Strengths}
 
-\cvtag{Hard-working} 
-\cvtag{Eye for detail}
-\cvtag{Motivator \& Leader}
+\cvtag{Hard-working}
+\cvtag{Eye for frontend}
+\cvtag{Team player}
 
-\divider\smallskip
-
-\cvtag{C++}
-\cvtag{Embedded Systems}
-\cvtag{Statistical Analysis}
-
-\cvsection{Languages}
-
-\cvskill{English}{5}
-\divider
-
-\cvskill{Spanish}{4}
-\divider
-
-\cvskill{German}{3}
-
-%% Yeah I didn't spend too much time making all the 
-%% spacing consistent... sorry. Use \smallskip, \medskip, 
+%% Yeah I didn't spend too much time making all the
+%% spacing consistent... sorry. Use \smallskip, \medskip,
 %% \bigskip, \vpsace etc to make ajustments.
 \medskip
 
 \cvsection{Education}
 
-\cvevent{Ph.D.\ in Your Discipline}{Your University}{Sept 2002 -- June 2006}{}
-Thesis title: Wonderful Research
-
-\divider
-
-\cvevent{M.Sc.\ in Your Discipline}{Your University}{Sept 2001 -- June 2002}{}
-
-\divider
-
-\cvevent{B.Sc.\ in Your Discipline}{Stanford University}{Sept 1998 -- June 2001}{}
+\cvevent{B.Sc.\ in Computer Science}{Warsaw University Of Technology}{October 2011 -- Semptember 2015}{Thesis - }
