--- a/cv.tex
+++ b/cv.tex
@@ -62,20 +62,20 @@
 \addbibresource{sample.bib}
 
 \begin{document}
-\name{Your Name Here}
-\tagline{Your Position or Tagline Here}
+\name{Michał Darda}
+\tagline{Software Developer}
 \photo{2.8cm}{Globe_High}
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
-  \email{your@email.com}
-  \phone{000-00-0000}
-  \mailaddress{Address, Street, 00000 County}
-  \location{Location, COUNTRY}
-  \homepage{www.homepage.com/}
-  \twitter{@twitterhandle}
-  \linkedin{linkedin.com/in/yourid}
-  \github{github.com/yourid}
+  \email{mdarda@pm.me}
+  \phone{514-455-097}
+  % \mailaddress{Address, Street, 00000 County}
+  \location{Warsaw, Poland}
+  % \homepage{www.homepage.com/}
+  % \twitter{@twitterhandle}
+  \linkedin{linkedin.com/in/mdarda}
+  \github{github.com/michaldarda}
   %% You MUST add the academicons option to \documentclass, then compile with LuaLaTeX or XeLaTeX, if you want to use \orcid or other academicons commands.
   % \orcid{orcid.org/0000-0000-0000-0000}
 }
@@ -94,61 +94,56 @@
 %% \cvsection title in the "main" bar.
 \cvsection[sample-p1sidebar]{Experience}
 
-\cvevent{Job Title 1}{Company 1}{Month 20XX -- Ongoing}{Location}
+\cvevent{Software Engineer 4 (out of 6 levels)}{Appriss Health}{January 2019 -- Ongoing}{Warsaw, Poland}
 \begin{itemize}
-\item Job description 1
-\item Job description 2
+\item Stack: Ruby, Rails, Vue.js, PostgreSQL, Redis, Sidekiq Enterprise
 \end{itemize}
 
 \divider
 
-\cvevent{Job Title 2}{Company 2}{Month 20XX -- Ongoing}{Location}
+\cvevent{Full Stack Developer}{Educartis}{October 2017 -- December 2018}{Warsaw, Poland}
 \begin{itemize}
-\item Job description 1
-\item Job description 2
+\item Developing educartis.com multi-country platform \newline
+Stack: Ruby, Rails, Vue.js, PostgreSQL, Heroku
+\end{itemize}
+
+\cvevent{Full Stack Developer}{Kreditech}{May 2016 -- October 2017}{Warsaw, Poland}
+\begin{itemize}
+\item Developing Monedo Pay payment application \newline
+Stack: Ruby, Rails, Go, React.js, PostgreSQL, MongoDB \newline
+
+\item Developing internal ad management system \newline
+Stack: Go, React.js, PostgreSQL
+
+\item Developing microservice for handling customers communication \newline
+Stack: Go, React.js, PostgreSQL, MongoDB
+\end{itemize}
+
+\cvevent{Ruby Developer}{Cubiware}{August 2014 -- April 2016}{Remote}
+\begin{itemize}
+\item Working on services in Rails, plain Ruby offering Admin Panel,
+XML RPC API, JSON API, XML REST API \newline
+Stack: Ruby, Sinatra, Rails, MySQL
+\end{itemize}
+
+\cvevent{Ruby On Rails Developer}{Positionly}{August 2014 -- August 2014}{Warsaw, Poland}
+\begin{itemize}
+\item Developing positionly.com core application \newline
+Stack: Ruby, Rails, PostgreSQL, MongoDB
 \end{itemize}
 
 \cvsection{Projects}
 
-\cvevent{Project 1}{Funding agency/institution}{}{}
+\cvevent{Landbook}{}{}{May 2016 - August 2016}
 \begin{itemize}
-\item Details
+\item Developed land-book.com using Ruby On Rails, jQuery.
 \end{itemize}
-
-\divider
-
-\cvevent{Project 2}{Funding agency/institution}{Project duration}{}
-A short abstract would also work.
 
 \medskip
 
-\cvsection{A Day of My Life}
-
-% Adapted from @Jake's answer from http://tex.stackexchange.com/a/82729/226
-% \wheelchart{outer radius}{inner radius}{
-% comma-separated list of value/text width/color/detail}
-\wheelchart{1.5cm}{0.5cm}{%
-  6/8em/accent!30/{Sleep,\\beautiful sleep},
-  3/8em/accent!40/Hopeful novelist by night,
-  8/8em/accent!60/Daytime job,
-  2/10em/accent/Sports and relaxation,
-  5/6em/accent!20/Spending time with family
-}
-
 \clearpage
-\cvsection[page2sidebar]{Publications}
 
 \nocite{*}
-
-\printbibliography[heading=pubtype,title={\printinfo{\faBook}{Books}},type=book]
-
-\divider
-
-\printbibliography[heading=pubtype,title={\printinfo{\faFileTextO}{Journal Articles}},type=article]
-
-\divider
-
-\printbibliography[heading=pubtype,title={\printinfo{\faGroup}{Conference Proceedings}},type=inproceedings]
 
 %% If the NEXT page doesn't start with a \cvsection but you'd
 %% still like to add a sidebar, then use this command on THIS
