Remove not needed files

--- a/cv.tex
+++ b/cv.tex
@@ -64,7 +64,7 @@
 \begin{document}
 \name{Michał Darda}
 \tagline{Software Developer}
-\photo{2.8cm}{Globe_High}
+% \photo{2.8cm}{Globe_High}
 \personalinfo{%
   % Not all of these are required!
   % You can add your own with \printinfo{symbol}{detail}
@@ -92,7 +92,7 @@
 %% You can always just use \marginpar{...} if you do
 %% not need to align the top of the contents to any
 %% \cvsection title in the "main" bar.
-\cvsection[sample-p1sidebar]{Experience}
+\cvsection[sidebar]{Experience}
 
 \cvevent{Software Engineer 4 (out of 6 levels)}{Appriss Health}{January 2019 -- Ongoing}{Warsaw, Poland}
 \begin{itemize}
