--- a/sidebar.tex
+++ b/sidebar.tex
@@ -31,4 +31,10 @@
 
 \cvsection{Education}
 
-\cvevent{B.Sc.\ in Computer Science}{Warsaw University Of Technology}{October 2011 -- Semptember 2015}{Thesis - }
+\cvevent{B.Sc.\ in Computer Science}{Warsaw University Of Technology}{October 2011 -- Semptember 2015}{}
+{\small Thesis - Usage of Elixir programming language for building scalable web applications, 5.0}
+
+\cvsection{Courses}
+
+\cvevent{B.Sc.\ in Computer Science}{Warsaw University Of Technology}{October 2011 -- Semptember 2015}{}
+{\small Thesis - Usage of Elixir programming language for building scalable web applications, 5.0}
