Remove not needed files

--- a/sidebar.tex
+++ b/sidebar.tex
@@ -17,6 +17,12 @@
 \divider
 
 \cvskill{React.js}{3}
+\divider
+
+\cvskill{TypeScript}{2}
+\divider
+
+\cvskill{Elixir}{2}
 
 \cvsection{Strengths}
 
