--- a/cv.tex
+++ b/cv.tex
@@ -96,7 +96,9 @@
 
 \cvevent{Software Engineer 4 (out of 6 levels)}{Appriss Health}{January 2019 -- Ongoing}{Warsaw, Poland}
 \begin{itemize}
-\item Stack: Ruby, Rails, Vue.js, PostgreSQL, Redis, Sidekiq Enterprise
+\item Maintaining set of applications intended to deliver reports for pharmasists and physicians \newline
+Project for U.S. public healthcare sector \newline
+Stack: Ruby, Rails, Vue.js, PostgreSQL, Redis, Sidekiq Enterprise
 \end{itemize}
 
 \divider
@@ -104,7 +106,7 @@
 \cvevent{Full Stack Developer}{Educartis}{October 2017 -- December 2018}{Warsaw, Poland}
 \begin{itemize}
 \item Developing educartis.com multi-country platform \newline
-Stack: Ruby, Rails, Vue.js, PostgreSQL, Heroku
+Stack: Ruby, Rails, Vue.js, PostgreSQL, Heroku, Sidekiq
 \end{itemize}
 
 \cvevent{Full Stack Developer}{Kreditech}{May 2016 -- October 2017}{Warsaw, Poland}
@@ -116,20 +118,20 @@ Stack: Ruby, Rails, Go, React.js, PostgreSQL, MongoDB \newline
 Stack: Go, React.js, PostgreSQL
 
 \item Developing microservice for handling customers communication \newline
-Stack: Go, React.js, PostgreSQL, MongoDB
+Stack: Go, React.js, PostgreSQL, MongoDB, RabbitMQ
 \end{itemize}
 
 \cvevent{Ruby Developer}{Cubiware}{August 2014 -- April 2016}{Remote}
 \begin{itemize}
 \item Working on services in Rails, plain Ruby offering Admin Panel,
 XML RPC API, JSON API, XML REST API \newline
-Stack: Ruby, Sinatra, Rails, MySQL
+Stack: Ruby, Sinatra, Rails, MySQL, RabbitMQ
 \end{itemize}
 
 \cvevent{Ruby On Rails Developer}{Positionly}{August 2014 -- August 2014}{Warsaw, Poland}
 \begin{itemize}
 \item Developing positionly.com core application \newline
-Stack: Ruby, Rails, PostgreSQL, MongoDB
+Stack: Ruby, Rails, PostgreSQL, MongoDB, Resque
 \end{itemize}
 
 \cvsection{Projects}
@@ -137,6 +139,13 @@ Stack: Ruby, Rails, PostgreSQL, MongoDB
 \cvevent{Landbook}{}{}{May 2016 - August 2016}
 \begin{itemize}
 \item Developed land-book.com using Ruby On Rails, jQuery.
+\end{itemize}
+
+\cvevent{Polak programming language}{}{}{2013}
+\begin{itemize}
+\item Open source programming language written in Ruby as
+school project. Entire syntax of language is in polish. \newline
+github.com/michaldarda/polak
 \end{itemize}
 
 \medskip
