--- a/sidebar.tex
+++ b/sidebar.tex
@@ -42,5 +42,8 @@
 
 \cvsection{Courses}
 
-\cvevent{B.Sc.\ in Computer Science}{Warsaw University Of Technology}{October 2011 -- Semptember 2015}{}
-{\small Thesis - Usage of Elixir programming language for building scalable web applications, 5.0}
+\cvevent{Neural Networks and Deep Learning}{deeplearning.ai - Coursera}{2017}{}
+
+\cvevent{Programming Languages}{University Of Washington (Coursera)}{2013}{}
+
+\cvevent{Functional Programming Principles in Scala}{École Polytechnique Fédérale de Lausanne (Coursera)}{2012}{}
