--- a/cv.tex
+++ b/cv.tex
@@ -98,7 +98,7 @@
 \begin{itemize}
 \item Maintaining set of applications intended to deliver reports for pharmasists and physicians \newline
 Project for U.S. public healthcare sector \newline
-Stack: Ruby, Rails, Vue.js, PostgreSQL, Redis, Sidekiq Enterprise
+{\small Stack: Ruby, Rails, Vue.js, PostgreSQL, Redis, Sidekiq Enterprise}
 \end{itemize}
 
 \divider
@@ -106,32 +106,34 @@ Stack: Ruby, Rails, Vue.js, PostgreSQL, Redis, Sidekiq Enterprise
 \cvevent{Full Stack Developer}{Educartis}{October 2017 -- December 2018}{Warsaw, Poland}
 \begin{itemize}
 \item Developing educartis.com multi-country platform \newline
-Stack: Ruby, Rails, Vue.js, PostgreSQL, Heroku, Sidekiq
+{\small Stack: Ruby, Rails, Vue.js, PostgreSQL, Heroku, Sidekiq}
 \end{itemize}
+
+\divider
 
 \cvevent{Full Stack Developer}{Kreditech}{May 2016 -- October 2017}{Warsaw, Poland}
 \begin{itemize}
-\item Developing Monedo Pay payment application \newline
-Stack: Ruby, Rails, Go, React.js, PostgreSQL, MongoDB \newline
-
-\item Developing internal ad management system \newline
-Stack: Go, React.js, PostgreSQL
-
+\item Developing Monedo Pay payment application
+\item Developing internal ad management system
 \item Developing microservice for handling customers communication \newline
-Stack: Go, React.js, PostgreSQL, MongoDB, RabbitMQ
+{\small Stack: Ruby, Rails, Go, React.js, PostgreSQL, MongoDB, RabbitMQ}
 \end{itemize}
+
+\divider
 
 \cvevent{Ruby Developer}{Cubiware}{August 2014 -- April 2016}{Remote}
 \begin{itemize}
 \item Working on services in Rails, plain Ruby offering Admin Panel,
 XML RPC API, JSON API, XML REST API \newline
-Stack: Ruby, Sinatra, Rails, MySQL, RabbitMQ
+{\small Stack: Ruby, Sinatra, Rails, MySQL, RabbitMQ}
 \end{itemize}
+
+\divider
 
 \cvevent{Ruby On Rails Developer}{Positionly}{August 2014 -- August 2014}{Warsaw, Poland}
 \begin{itemize}
 \item Developing positionly.com core application \newline
-Stack: Ruby, Rails, PostgreSQL, MongoDB, Resque
+{\small Stack: Ruby, Rails, PostgreSQL, MongoDB, Resque}
 \end{itemize}
 
 \cvsection{Projects}
@@ -140,6 +142,8 @@ Stack: Ruby, Rails, PostgreSQL, MongoDB, Resque
 \begin{itemize}
 \item Developed land-book.com using Ruby On Rails, jQuery.
 \end{itemize}
+
+\divider
 
 \cvevent{Polak programming language}{}{}{2013}
 \begin{itemize}
