--- a/cv.tex
+++ b/cv.tex
@@ -115,7 +115,7 @@ Project for U.S. public healthcare sector \newline
 \begin{itemize}
 \item Developing Monedo Pay payment application
 \item Developing internal ad management system
-\item Developing microservice for handling customers communication \newline
+\item Developing microservice for handling communication with customers \newline
 {\small Stack: Ruby, Rails, Go, React.js, PostgreSQL, MongoDB, RabbitMQ}
 \end{itemize}
 
@@ -125,6 +125,7 @@ Project for U.S. public healthcare sector \newline
 \begin{itemize}
 \item Working on services in Rails, plain Ruby offering Admin Panel,
 XML RPC API, JSON API, XML REST API \newline
+\item Leading team of 4 people
 {\small Stack: Ruby, Sinatra, Rails, MySQL, RabbitMQ}
 \end{itemize}
 
@@ -135,6 +136,8 @@ XML RPC API, JSON API, XML REST API \newline
 \item Developing positionly.com core application \newline
 {\small Stack: Ruby, Rails, PostgreSQL, MongoDB, Resque}
 \end{itemize}
+
+\medskip
 
 \cvsection{Projects}
 
@@ -148,11 +151,9 @@ XML RPC API, JSON API, XML REST API \newline
 \cvevent{Polak programming language}{}{}{2013}
 \begin{itemize}
 \item Open source programming language written in Ruby as
-school project. Entire syntax of language is in polish. \newline
+school project. \newline
 github.com/michaldarda/polak
 \end{itemize}
-
-\medskip
 
 \clearpage
 
